--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 appURL= https://tutorialsninja.com/demo/
 email= salim@khan.com
 password= salim1234
-#execution_env=local
-execution_env=remote
+execution_env=local
+#execution_env=remote
